--- a/scss/style.scss
+++ b/scss/style.scss
@@ -12,7 +12,7 @@ body{
     padding: 25px 50px;
     background: yellow;
     margin: auto;
-    width: 500px;
+    //width: 500px;
 }
 
 #UITitle{
@@ -40,8 +40,6 @@ body{
 
 #bord{
     display:grid;
-    grid-template-columns: repeat(5, 100px);
-    grid-template-rows: repeat(5, 100px);
     margin: auto;
     background: black;
     border: 50px solid yellow;
