--- a/css/style.css
+++ b/css/style.css
@@ -6,6 +6,7 @@ body {
       grid-template-columns: repeat(1, auto);
   -ms-grid-rows: (auto)[2];
       grid-template-rows: repeat(2, auto);
+  overflow: hidden;
 }
 
 #input {
@@ -57,6 +58,14 @@ body {
   border: 50px solid yellow;
   border-top: 0px;
   background: white;
+}
+
+#lingoBord {
+  display: -ms-grid;
+  display: grid;
+  position: relative;
+  bottom: 110%;
+  left: 2.5%;
 }
 
 #gap {
